--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,23 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.trapezium-shape {
+  clip-path: polygon(0% 0%, 100% 0%, 80% 100%, 20% 100%);
+  background-color: white;
+}
+.trapezium-blur {
+  clip-path: polygon(0% 100%, 100% 100%, 80% 0%, 20% 0%);
+  background-color: white;
+  filter: blur(10px);
+  /* position: absolute; */
+  /* top: 0; */
+  /* left: 0; */
+  /* right: 0; */
+  /* bottom: 0; */
+  /* z-index: -1;  */
+}
+
+.clip-polygon {
+  clip-path: polygon(20% 0, 80% 0, 100% 100%, 0 100%);
+}
